--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Hello World! I’m supercatmama. This is my website!</p>
+<p>Hello World! I’m supercatmama. This is my website!
+   Building websites is fun. You should try it too.</p>
 
 </body>
 </html>
